Fix alignment on mobile

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -148,6 +148,9 @@ footer {
 	.logo-container,
 	.tagline-container p {
 		text-align: right;
+	},
+	.location-container p {
+		text-align: right;
 	}
 
 	main {
